<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/design_default_color_secondary"
    android:orientation="vertical"
    android:backgroundTint="#65FFFFFF"
    android:paddingHorizontal="10dp"
    android:paddingVertical="6dp">

  <TextView
      android:id="@+id/txt_item_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="2dp"
      android:text="@string/title_label"
      android:letterSpacing="0.1"
      android:textAppearance="@style/TextAppearance.AppCompat.Large" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="1.0">

    <TextView
        android:id="@+id/txt_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.55"
        android:padding="2dp"
        android:text="@string/date"
        android:textAllCaps="true"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txt_item_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/group"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/txt_rupee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txt_item_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/amount"
        android:textStyle="bold|italic" />
  </LinearLayout>
</LinearLayout>
